--- a/local/src_v6/package.json
+++ b/local/src_v6/package.json
@@ -1,22 +1,21 @@
 {
   "name": "Standart",
-  "description": "db.by framework based on Bootstrap",
+  "description": "framework based on Bootstrap",
   "version": "6.9.0",
   "keywords": [
-    "bootstrap",
-    "db.by"
+    "bootstrap"
   ],
-  "homepage": "https://www.db.by/",
+  "homepage": "",
   "author": "Borovoy Studio",
   "bootstrap": "4.1.3",
   "nodejs": "10.16.3",
   "bugs": {
-    "url": "http://git.db.by/borovoy/standart/issues"
+    "url": ""
   },
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "http://git.db.by/standart/standart"
+    "url": ""
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
